--- a/newproject_maven/test-output/index.html
+++ b/newproject_maven/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\shiva\AppData\Local\Temp\testng-eclipse--1212049664\testng-customsuite.xml</span>
+                    <span>C:\Users\shiva\AppData\Local\Temp\testng-eclipse-1238572352\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.orangehrm.tests.sample.TestNaukari" hash-for-method="TestPopUp">TestPopUp</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.orangehrm.tests.samplenew.TailarmanAddToBag" hash-for-method="TestPopUp">TestPopUp</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,7 +120,7 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.orangehrm.tests.sample.TestNaukari</span>
+              <span class="class-name">com.orangehrm.tests.samplenew.TailarmanAddToBag</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -135,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\shiva\AppData\Local\Temp\testng-eclipse--1212049664\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\shiva\AppData\Local\Temp\testng-eclipse-1238572352\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,7 +144,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.orangehrm.tests.sample.TestNaukari&quot;/&gt;
+      &lt;class name=&quot;com.orangehrm.tests.samplenew.TailarmanAddToBag&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -187,13 +187,13 @@ data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'TestPopUp')
-data.setCell(0, 2, 'com.orangehrm.tests.sample.TestNaukari')
-data.setCell(0, 3, 59853);
+data.setCell(0, 2, 'com.orangehrm.tests.samplenew.TailarmanAddToBag')
+data.setCell(0, 3, 41715);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 59 seconds</span>
+              <span class="suite-total-time">Total running time: 41 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -219,7 +219,7 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.orangehrm.tests.sample.TestNaukari</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.orangehrm.tests.samplenew.TailarmanAddToBag</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">TestPopUp</span>
                 <span class="method-start">0 ms</span>
