--- a/newproject_maven/test-output/old/Default suite/classes.html
+++ b/newproject_maven/test-output/old/Default suite/classes.html
@@ -4,7 +4,7 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.orangehrm.tests.sample.TestNaukari</td>
+<td>com.orangehrm.tests.samplenew.TailarmanAddToBag</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
