--- a/newproject_maven/test-output/old/Default suite/methods-alphabetical.html
+++ b/newproject_maven/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="79f379">  <td>19/12/22 20:10:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TailarmanAddToBag.TestPopUp()[pri:0, instance:com.orangehrm.tests.samplenew.TailarmanAddToBag@17cd7a0]">TestPopUp</td> 
-  <td>main@10199960</td>   <td></td> </tr>
+<tr bgcolor="79f379">  <td>20/03/04 16:24:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Flipkart.login()[pri:0, instance:com.orangehrm.tests.sample.Flipkart@194d431]">login</td> 
+  <td>main@25400955</td>   <td></td> </tr>
 </table>
